phantom-coerce/tests/ui/type_hole_prevents_cross_coercion.stderr
error[E0308]: mismatched types
  --> tests/ui/type_hole_prevents_cross_coercion.rs:27:53
   |
27 |     let _coerced: &TypedPath<SomeBase, Directory> = path.coerce();
   |                   -------------------------------   ^^^^^^^^^^^^^ expected `&TypedPath<SomeBase, Directory>`, found `&TypedPath<SomeBase, File>`
   |                   |
   |                   expected due to this
   |
   = note: expected reference `&TypedPath<SomeBase, Directory>`
              found reference `&TypedPath<SomeBase, File>`
